--- a/AppLabo1/app/src/main/AndroidManifest.xml
+++ b/AppLabo1/app/src/main/AndroidManifest.xml
@@ -9,13 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+                  android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <activity android:name=".ChildActivity"
+                  android:label="@string/app_name">
 
+        </activity>
+
+        <uses-permission android:name="android.permission.INTERNET"/>
+        <uses-permission android:name="android.permission.CALL_PHONE"/>
+
+    </application>
 </manifest>
